GNOME Bugzilla – Bug 643390
Recent API change in NetworkManager breaks the network panel (NM_DEVICE_TYPE_CDMA and NM_DEVICE_TYPE_GSM are no more)
Last modified: 2011-02-28 09:58:44 UTC
Commit 2140dad5e0de0033e5c9bb10bd77ecd80085e5a3 to NetworkManager (http://cgit.freedesktop.org/NetworkManager/NetworkManager/commit/?id=2140dad5e0de0033e5c9bb10bd77ecd80085e5a3) changed the definition of the `NMDeviceType` enum, among other things, which breaks at least `panels/network/panel-common.c` because `NM_DEVICE_TYPE_CDMA` and `NM_DEVICE_TYPE_GSM` are no longer defined. This is a heads up...
Created attachment 182045 [details] [review] patch for new NetworkManager API Since gnome-control-center was already treating NM_DEVICE_TYPE_CDMA and _GSM identically, we merely need to replace the checks for specific modem types with checks for NM_DEVICE_TYPE_MODEM. This patch does so.
Created attachment 182046 [details] [review] Patch
Comment on attachment 182045 [details] [review] patch for new NetworkManager API Daniel Trebbien's patch is better :)
Wow! We submitted patches one minute apart :)
Applied, thanks guys.