Use the NetworkManager modem capabilities API.

A recent change to the NetworkManager API combined the
NM_DEVICE_TYPE_GSM and NM_DEVICE_TYPE_CDMA types as
NM_DEVICE_TYPE_MODEM and provided an alternative API for accessing the
modem device's capabilities (including GSM_UMTS and CDMA_EVDO).

https://bugzilla.gnome.org/show_bug.cgi?id=643390

Signed-off-by: Richard Hughes <richard@hughsie.com>